instruction to sport pinned threads